--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello my name Dhruv Patel</h1>
+    <h1>I am commerce background </h1>
+    <h1>I like to play volleyball</h1>
 </body>
 </html>
