--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Hello my name Dhruv Patel</h1>
     <h1>I am commerce background </h1>
     <h1>I like to play volleyball</h1>
+    <h1>I played in colleage tournamnet</h1>
+    <h1>Our team reached quarter final</h1>
 </body>
 </html>
